<resources>
    <string name="app_name">ONeS</string>
    <string name="facebook_app_id">164581964246367</string>
    <string name="fb_login_protocol_scheme">fb164581964246367</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="demoMess">ChitChat  Chatty Chat Chat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_name">My Name</string>
    <string name="my_bio">My Bio</string>
    <string name="my_age">My Age</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="job_software_engineer_at_workday">Job: Software Engineer at Workday</string>
</resources>
