<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frags.UserFrag">

    <ImageView

        android:id="@+id/imageView_profile_picture"

        android:layout_width="100dp"

        android:layout_height="100dp"

        android:layout_marginBottom="8dp"

        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.0"

        app:srcCompat="@drawable/account_profile_default" />



    <android.support.design.widget.TextInputEditText

        android:id="@+id/editText_name"

        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"

        android:layout_marginTop="32dp"

        android:hint="@string/my_name"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/imageView_profile_picture"

        app:layout_constraintVertical_bias="0.025" />


    <android.support.design.widget.TextInputEditText

        android:id="@+id/editText_bio"

        android:layout_width="0dp"

        android:layout_height="44dp"

        android:layout_marginBottom="8dp"

        android:layout_marginTop="8dp"

        android:hint="@string/my_bio"

        android:maxHeight="150dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/editText_name"

        app:layout_constraintVertical_bias="0.0" />


    <android.support.design.widget.TextInputEditText

        android:id="@+id/editText_age"

        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"

        android:layout_marginTop="8dp"

        android:hint="@string/my_age"

        android:maxHeight="150dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/editText_bio"

        app:layout_constraintVertical_bias="0.042" />

    <Button

        android:id="@+id/btn_save"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"

        android:layout_marginRight="16dp"

        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"



        android:text="@string/save"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.971"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.982"
        tools:ignore="RtlHardcoded" />



    <Button

        android:id="@+id/btn_sign_out"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"

        android:layout_marginRight="16dp"

        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"


        android:text="@string/sign_out"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.028"

        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.982"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="371dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Job: Software Engineer at Workday"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_bio"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="279dp" />


</android.support.constraint.ConstraintLayout>